--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-base": "^16.3.21",
     "@syncfusion/ej2-react-grids": "^16.3.22",
     "bootstrap": "^4.1.3",
     "prop-types": "^15.6.2",
