--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.1.2",
     "@syncfusion/ej2-base": "^16.3.21",
     "@syncfusion/ej2-react-grids": "^16.3.23",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "downshift": "^2.2.3",
     "prop-types": "^15.6.2",
@@ -18,7 +19,8 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
