--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "2.1.2",
     "eslint-plugin-react": "^7.2.0",
-    "prettier": "1.5.3"
+    "prettier": "1.5.3",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
