--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "import/prefer-default-export": 0,
     "no-nested-ternary": 0,
     "no-confusing-arrow": 0,
+    "linebreak-style": 0,
     "no-param-reassign": [
       "error",
       {
