--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "yarn": ">=1.0.1"
   },
   "dependencies": {
-    "@material-ui/core": "^3.1.2",
+    "@material-ui/core": "^3.3.0",
     "@material-ui/icons": "^3.0.1",
-    "@syncfusion/ej2-base": "^16.3.21",
-    "@syncfusion/ej2-react-grids": "^16.3.23",
+    "@syncfusion/ej2-base": "^16.3.24",
+    "@syncfusion/ej2-react-grids": "^16.3.25",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
-    "downshift": "^2.2.3",
+    "downshift": "^3.1.2",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
@@ -24,11 +24,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.5.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.0",
-    "semantic-ui-react": "^0.82.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
@@ -58,7 +58,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "1.14.3",
+    "prettier": "^1.14.3",
     "webpack-bundle-analyzer": "^3.0.3"
   }
 }
