--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "web3": "^1.0.0-beta.36"
+    "web3": "^1.0.0-beta.36",
+    "react-content-loader": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
