--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.2",
+    "react-content-loader": "^3.2.0",
     "react-dom": "^16.5.2",
+    "react-flexbox-grid": "^2.1.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.5.0",
     "recharts": "^1.3.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "web3": "^1.0.0-beta.36",
-    "react-content-loader": "^3.2.0"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
