--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bootstrap": "^4.1.3",
     "date-fns": "^2.0.0-alpha.16",
     "downshift": "^3.1.2",
+    "form-data": "^2.3.3",
     "material-ui-pickers": "^1.0.0",
     "moment": "^2.22.2",
     "mui-datatables": "^2.0.0-beta-36",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.2",
+    "react-content-loader": "^3.2.0",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
@@ -31,8 +33,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "web3": "^1.0.0-beta.36",
-    "react-content-loader": "^3.2.0"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
