--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^3.3.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "big-integer": "^1.6.36",
     "bootstrap": "^4.1.3",
     "country-list": "^2.1.0",
     "date-fns": "^2.0.0-alpha.16",
