--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@material-ui/core": "^3.3.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "big-integer": "^1.6.36",
     "bootstrap": "^4.1.3",
     "country-list": "^2.1.0",
     "date-fns": "^2.0.0-alpha.16",
     "downshift": "^3.1.2",
+    "echarts": "^4.2.0-rc.2",
+    "echarts-for-react": "^2.0.15-beta.0",
     "form-data": "^2.3.3",
     "material-ui-pickers": "^1.0.0",
     "moment": "^2.22.2",
