--- a/package.json
+++ b/package.json
@@ -7,31 +7,30 @@
     "yarn": ">=1.0.1"
   },
   "dependencies": {
-    "@material-ui/core": "^3.3.0",
+    "@date-io/date-fns": "0.0.2",
+    "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "country-list": "^2.1.0",
-    "date-fns": "^2.0.0-alpha.16",
-    "downshift": "^3.1.2",
+    "date-fns": "^2.0.0-alpha.21",
+    "downshift": "^3.1.5",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "form-data": "^2.3.3",
-    "material-ui-pickers": "^1.0.0",
-    "moment": "^2.22.2",
-    "mui-datatables": "^2.0.0-beta-36",
+    "material-ui-pickers": "^2.0.2",
+    "mui-datatables": "^2.0.0-beta-39",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
-    "react": "^16.5.2",
+    "react": "^16.6.3",
     "react-content-loader": "^3.2.0",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.6.3",
     "react-flexbox-grid": "^2.1.2",
     "react-loadable": "^5.5.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "recharts": "^1.3.4",
-    "redux": "^4.0.0",
+    "react-scripts": "^2.1.1",
+    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "web3": "^1.0.0-beta.36"
@@ -49,21 +48,26 @@
     "size": "size-limit"
   },
   "devDependencies": {
-    "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-config-react-app": "^3.0.4",
-    "eslint-plugin-flowtype": "^3.0.0",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.2",
     "webpack-bundle-analyzer": "^3.0.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
