--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "country-data": "0.0.31",
     "country-list": "^2.1.0",
     "date-fns": "^2.0.0-alpha.16",
     "downshift": "^3.1.2",
