--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "yarn": ">=1.0.1"
   },
   "dependencies": {
-    "@date-io/date-fns": "0.0.2",
+    "@date-io/moment": "^0.0.2",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "country-data": "0.0.31",
     "country-list": "^2.1.0",
-    "date-fns": "^2.0.0-alpha.21",
+    "moment": "^2.22.2",
     "downshift": "^3.1.5",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
