--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "bootstrap": "^4.1.3",
     "country-data": "0.0.31",
     "country-list": "^2.1.0",
-    "moment": "^2.22.2",
     "downshift": "^3.1.5",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "form-data": "^2.3.3",
     "material-ui-pickers": "^2.0.2",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "mui-datatables": "^2.0.0-beta-39",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
