--- a/package.json
+++ b/package.json
@@ -3,39 +3,38 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=8.6.0",
+    "node": "10.x",
     "yarn": ">=1.0.1"
   },
   "dependencies": {
     "@date-io/moment": "^0.0.2",
-    "@material-ui/core": "^3.6.0",
+    "@material-ui/core": "^3.8.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "country-data": "0.0.31",
-    "downshift": "^3.1.5",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "form-data": "^2.3.3",
-    "material-ui-pickers": "^2.0.3",
-    "moment": "^2.22.2",
+    "material-ui-pickers": "^2.0.5",
+    "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
-    "mui-datatables": "^2.0.0-beta-41",
+    "mui-datatables": "^2.0.0-beta-47",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-content-loader": "^3.4.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-loadable": "^5.5.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
     "react-select": "^2.1.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
-    "web3": "^1.0.0-beta.36"
+    "reselect": "^4.0.0",
+    "web3": "^1.0.0-beta.37"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,17 +52,17 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-config-react-app": "^3.0.5",
+    "eslint-config-react-app": "^3.0.6",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.15.2",
+    "prettier": "^1.15.3",
     "webpack-bundle-analyzer": "^3.0.3"
   },
   "browserslist": [
