--- a/package.json
+++ b/package.json
@@ -7,34 +7,34 @@
     "yarn": ">=1.0.1"
   },
   "dependencies": {
-    "@date-io/moment": "^1.0.1",
-    "@material-ui/core": "^3.8.3",
+    "@date-io/moment": "^1.3.6",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.2.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "country-data": "0.0.31",
-    "echarts": "^4.2.0-rc.2",
+    "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "form-data": "^2.3.3",
-    "material-ui-pickers": "^2.1.1",
-    "moment": "^2.23.0",
-    "moment-timezone": "^0.5.23",
-    "mui-datatables": "^2.0.0-beta-50",
-    "prop-types": "^15.6.2",
-    "qs": "^6.6.0",
-    "react": "^16.7.0",
-    "react-content-loader": "^3.4.2",
-    "react-dom": "^16.7.0",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
+    "mui-datatables": "^2.4.0",
+    "prop-types": "^15.7.2",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
+    "react-content-loader": "^4.2.1",
+    "react-dom": "^16.8.6",
     "react-flexbox-grid": "^2.1.2",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
-    "react-select": "^2.2.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "web3": "^1.0.0-beta.37"
+    "web3": "1.0.0-beta.37"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,20 +50,20 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-plugin-flowtype": "^3.2.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-mocha": "^5.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-flowtype": "^3.10.3",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.15.3",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "prettier": "^1.18.2",
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "browserslist": [
     ">0.2%",
